[package]
name = "rusty-zenith"
version = "0.1.0"
authors = [ "BananaPuncher714 <banana@aaaaahhhhhhh.com>" ]
edition = "2018"

[dependencies]
base64 = "0.13.0"
bus = "2.2.3"
httparse = "1.4.1"
httpdate = "1.0.1"
path-clean = "0.1.0"
regex = "1.5.4"
tokio = { version = "1.6.1", features = [ "full" ] }
urlencoding = "1.3.3"